<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>AngatuLibraries</groupId>
	<artifactId>AngatuLibraries</artifactId>
	<version>latest</version>

	<!-- Configurações do Java -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<!-- Repositórios -->
	<repositories>
		<!-- Maven Central -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>

		<!-- JitPack (para libs do GitHub) -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<!-- Build -->
	<build>
		<plugins>
			<!-- Lombok como processador de anotações explícito: garante a geração
			     de getters/setters mesmo com a dependência em scope provided -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.44</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!--
		ESTRATÉGIA DE DEPENDÊNCIAS
		===========================
		A AngatuLibraries NÃO empacota bibliotecas de terceiros no JAR.

		- `provided`:  necessária apenas em tempo de COMPILAÇÃO (não entra no JAR
		               e não é propagada ao consumidor). Ex: Lombok.
		- `optional`:  faz parte do classpath de compilação DESTA biblioteca, mas
		               NÃO é propagada ao consumidor. Cada funcionalidade detecta
		               a ausência em tempo de execução e exibe instruções claras
		               de instalação (Maven/Gradle).

		O consumidor deve declarar apenas as dependências dos módulos que
		realmente utiliza. Consulte a seção "Dependências por módulo" do README.
	-->
	<dependencies>

		<!-- ============================================================= -->
		<!-- COMPILAÇÃO (provided)                                         -->
		<!-- ============================================================= -->

		<!-- Lombok: reduz código boilerplate (getters, setters, etc). Somente
		     tempo de compilação — não entra no JAR nem é necessária ao consumidor. -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.44</version>
			<scope>provided</scope>
		</dependency>

		<!-- ============================================================= -->
		<!-- WEB (Javalin)                                                  -->
		<!-- ============================================================= -->

		<!-- Javalin: framework web leve (JavalinAPI, HtmlRouteAPI, AssetsAPI, rotas) -->
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin</artifactId>
			<version>7.2.2</version>
			<optional>true</optional>
		</dependency>

		<!-- javalin-ssl: plugin SSL/TLS com PEM/JKS (modo HTTPS do JavalinAPI) -->
		<dependency>
			<groupId>io.javalin.community.ssl</groupId>
			<artifactId>javalin-ssl</artifactId>
			<version>7.2.2</version>
			<optional>true</optional>
		</dependency>

		<!-- Reflections: descoberta automática de rotas (Route) no classpath -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- PERSISTÊNCIA (Saveable)                                        -->
		<!-- ============================================================= -->

		<!-- SQLite JDBC: driver do banco utilizado pelo Saveable -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.51.3.0</version>
			<optional>true</optional>
		</dependency>

		<!-- HikariCP: pool de conexões do Saveable -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>7.0.2</version>
			<optional>true</optional>
		</dependency>

		<!-- Gson: conversão JSON <-> Java (Saveable, GsonAPI, WebPushAPI, DeepSeek) -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.2</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- AMBIENTE E SEGURANÇA                                           -->
		<!-- ============================================================= -->

		<!-- dotenv: leitura de variáveis de ambiente (.env) — Env -->
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>3.2.0</version>
			<optional>true</optional>
		</dependency>

		<!-- BCrypt: hash seguro de senhas — Password -->
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>0.4</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- WEB PUSH (WebPushAPI)                                          -->
		<!-- ============================================================= -->

		<!-- web-push: envio de notificações Web Push (RFC 8292) -->
		<dependency>
			<groupId>nl.martijndwars</groupId>
			<artifactId>web-push</artifactId>
			<version>5.1.2</version>
			<optional>true</optional>
		</dependency>

		<!-- BouncyCastle: geração de chaves EC P-256 (VAPID) -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.83</version>
			<optional>true</optional>
		</dependency>

		<!-- jose4j: assinatura JWT do VAPID (usada pelo web-push) -->
		<dependency>
			<groupId>org.bitbucket.b_c</groupId>
			<artifactId>jose4j</artifactId>
			<version>0.9.6</version>
			<optional>true</optional>
		</dependency>

		<!-- Apache HttpClient: transporte HTTP usado pelo web-push -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.14</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- E-MAIL (EmailAPI)                                              -->
		<!-- ============================================================= -->

		<!-- Jakarta Mail: envio de e-mails via SMTP -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- DISCORD (Bot)                                                  -->
		<!-- ============================================================= -->

		<!-- JDA: Java Discord API -->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>6.4.1</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- PAGAMENTOS (MercadoPagoAPI)                                    -->
		<!-- ============================================================= -->

		<!-- SDK Java do Mercado Pago -->
		<dependency>
			<groupId>com.mercadopago</groupId>
			<artifactId>sdk-java</artifactId>
			<version>2.9.2</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- NAVEGADOR (BrowserAPI)                                         -->
		<!-- ============================================================= -->

		<!-- Playwright: automação de navegador headless (screenshots, scraping) -->
		<dependency>
			<groupId>com.microsoft.playwright</groupId>
			<artifactId>playwright</artifactId>
			<version>1.58.0</version>
			<optional>true</optional>
		</dependency>

		<!-- ============================================================= -->
		<!-- IMAGENS (ImageAPI, QRCodeAPI)                                  -->
		<!-- ============================================================= -->

		<!-- Thumbnailator: thumbnails de alta qualidade -->
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>0.4.21</version>
			<optional>true</optional>
		</dependency>

		<!-- TwelveMonkeys: suporte adicional de formatos via ImageIO SPI
		     (WebP, TIFF etc. — registrados automaticamente quando presentes) -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-webp</artifactId>
			<version>3.12.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-tiff</artifactId>
			<version>3.12.0</version>
			<optional>true</optional>
		</dependency>

		<!-- ZXing: geração e leitura de QR Codes -->
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.3</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.5.3</version>
			<optional>true</optional>
		</dependency>

	</dependencies>

</project>
